@@ -38,6 +38,9 @@ CBaseGroundDrawer::CBaseGroundDrawer(void)
 		infoTexMem[a]=255;
 
 	highResInfoTexWanted=false;
+
+	highResLosTex = !!configHandler.GetInt("HighResLos", 0);
+	smoothLosTex = !!configHandler.GetInt("SmoothLos", 1);
 }
 
 CBaseGroundDrawer::~CBaseGroundDrawer(void)
@@ -120,7 +123,7 @@ void CBaseGroundDrawer::ToggleLosTexture()
 		drawLineOfSight=true;
 		SetDrawMode(drawLos);
 		extraTex=0;
-		highResInfoTexWanted=false;
+		highResInfoTexWanted=highResLosTex;
 		updateTextureState=0;
 		while(!UpdateExtraTexture());
 	}
@@ -135,6 +138,31 @@ void CBaseGroundDrawer::ToggleRadarAndJammer()
 	}
 }
 
+static inline int InterpolateLos(unsigned short* p, int xsize, int ysize, int mip, int factor, int x, int y)
+{
+	int x1 = x >> mip;
+	int y1 = y >> mip;
+	int s1 = p[y1*xsize+x1] != 0; // top left
+	if (mip > 0) {
+		int x2 = x1 + 1;
+		int y2 = y1 + 1;
+		if (x2 >= xsize)
+			x2 = xsize - 1;
+		if (y2 >= ysize)
+			y2 = ysize - 1;
+		int s2 = p[y1*xsize+x2] != 0; // top right
+		int s3 = p[y2*xsize+x1] != 0; // bottom left
+		int s4 = p[y2*xsize+x2] != 0; // bottom right
+		int size = 1 << mip;
+		int fracx = x % size;
+		int fracy = y % size;
+		int c1 = factor * (s2 - s1) * fracx / size + factor * s1;
+		int c2 = factor * (s4 - s3) * fracx / size + factor * s3;
+		return (c2 - c1) * fracy / size + c1;
+	}
+	return factor * s1;
+}
+
 // Gradually calculate the extra texture based on updateTextureState:
 //   updateTextureState < 50:   Calculate the texture color values and copy them in a buffer
 //   updateTextureState >= 50:  Copy the buffer into a texture
@@ -146,6 +174,8 @@ bool CBaseGroundDrawer::UpdateExtraTexture()
 
 	unsigned short* myLos=loshandler->losMap[gu->myAllyTeam];
 	unsigned short* myAirLos=loshandler->airLosMap[gu->myAllyTeam];
+	unsigned short* myRadar=radarhandler->radarMaps[gu->myAllyTeam];
+	unsigned short* myJammer=radarhandler->jammerMaps[gu->myAllyTeam];
 	if(updateTextureState<50){
 		int starty;
 		int endy;
@@ -224,34 +254,27 @@ bool CBaseGroundDrawer::UpdateExtraTexture()
 				}
 			}
 			break;
-		case drawLos:
+		case drawLos: {
+			int lowRes = highResInfoTex ? 0 : -1;
+			int endx = highResInfoTex ? gs->mapx : gs->hmapx;
+			int pwr2mapx = gs->pwr2mapx >> (-lowRes);
 			for(int y=starty;y<endy;++y){
-				for(int x=0;x<gs->hmapx;++x){
-					int a=y*(gs->pwr2mapx>>1)+x;
+				for(int x=0;x<endx;++x){
+					int a=y*pwr2mapx+x;
 					int inRadar=0;
 					int inJam=0;
 					if (drawRadarAndJammer){
-						if(radarhandler->radarMaps[gu->myAllyTeam][y/(RADAR_SIZE/2)*radarhandler->xsize+x/(RADAR_SIZE/2)])
-							inRadar=50;
-						if(radarhandler->jammerMaps[gu->myAllyTeam][y/(RADAR_SIZE/2)*radarhandler->xsize+x/(RADAR_SIZE/2)])
-							inJam=50;
+						inRadar = InterpolateLos(myRadar, radarhandler->xsize, radarhandler->ysize, 3+lowRes, 50, x, y);
+						inJam =  InterpolateLos(myJammer, radarhandler->xsize, radarhandler->ysize, 3+lowRes, 50, x, y);
 					}
-					if(myLos[((y*2)>>loshandler->losMipLevel)*loshandler->losSizeX+((x*2)>>loshandler->losMipLevel)]!=0){
-						infoTexMem[a*4]=128+inJam;
-						infoTexMem[a*4+1]=128+inRadar;
-						infoTexMem[a*4+2]=128;
-					} else if(myAirLos[((y*2)>>loshandler->airMipLevel)*loshandler->airSizeX+((x*2)>>loshandler->airMipLevel)]!=0){
-						infoTexMem[a*4]=96+inJam;
-						infoTexMem[a*4+1]=96+inRadar;
-						infoTexMem[a*4+2]=96;
-					} else {
-						infoTexMem[a*4]=64+inJam;
-						infoTexMem[a*4+1]=64+inRadar;
-						infoTexMem[a*4+2]=64;
-					}
+					int inLos = InterpolateLos(myLos,    loshandler->losSizeX, loshandler->losSizeY, loshandler->losMipLevel+lowRes, 32, x, y);
+					int inAir = InterpolateLos(myAirLos, loshandler->airSizeX, loshandler->airSizeY, loshandler->airMipLevel+lowRes, 32, x, y);
+					infoTexMem[a*4] = 64+inLos+inAir+inJam;
+					infoTexMem[a*4+1] = 64+inLos+inAir+inRadar;
+					infoTexMem[a*4+2] = 64+inLos+inAir;
 				}
 			}
-			break;
+			break;}
 		}
 	}
 
@@ -272,7 +295,7 @@ bool CBaseGroundDrawer::UpdateExtraTexture()
 				glTexImage2D(GL_TEXTURE_2D,0,GL_RGBA8, gs->pwr2mapx>>1, gs->pwr2mapy>>1,0,GL_RGBA, GL_UNSIGNED_BYTE, infoTexMem);
 			highResInfoTex=highResInfoTexWanted;
 			updateTextureState=0;
-			return true;
+// 			return true;
 		}
 
 	}
